2000-11-09  Dave Love  <fx@gnu.org>

	* message.el (tool-bar-map): Defvar when compiling.

	* gnus-setup.el (running-xemacs, gnus-use-installed-tm)
	(gnus-tm-lisp-directory): Deleted.
	(gnus-use-installed-mailcrypt, gnus-emacs-lisp-directory): Use
	(featurep 'xemacs).
	(gnus-gnus-lisp-directory, gnus-mailcrypt-lisp-directory) 
	(gnus-mailcrypt-lisp-directory, gnus-bbdb-lisp-directory): Remove
	version numbers from file names.

2000-11-08  John Wiegley  <johnw@gnu.org>

	* gnus-topic.el (gnus-topic-mode): Use `setq' to clear
	`gnus-group-change-level-function', instead of `remove-hook',
	because it's not a hook!

2000-11-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnweb.el (nnweb-decode-entities): Work for non-character
	entities. 

	* gnus-start.el (gnus-read-active-file, gnus-activate-group):
	Issue message on quit.

2000-11-08  Simon Josefsson  <simon@josefsson.org>

	* rfc2104.el: Add SHA-1 example.
	(rfc2104-hexstring-to-bitstring): New function.
	(rfc2104-hash): Use it.

2000-11-08  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-start.el: Remove gnus-xemacs.
	
	* nndoc.el (nndoc-dissect-mime-parts-sub): Correctly mark body-begin.

	* gnus-score.el (gnus-score-body): Don't score body when
	agent-fetching.
	(gnus-score-followup): Don't score followup either.
	(gnus-score-use-all-scores): New variable.
	(gnus-all-score-files): Use it.
	(gnus-score-find-bnews): Use directory-sep-char.

	* nnweb.el (nnweb-url-retrieve-asynch): url-retrieve is 
	asynchronous in Exp version.

2000-11-08  Dave Love  <fx@gnu.org>

	* mm-view.el: Use featurep for XEmacs test.
	(mm-inline-message): Test for `remove-specifier'; don't use
	condition-case.

	* mm-bodies.el (mm-encode-body): Use mm-multibyte-p.

	* gnus-score.el (gnus-score-load-file): Use expand-file-name.
	(gnus-score-find-bnews): Don't concat "".

	* cu-exit.xpm, prev-ur.xpm, next-ur.xpm, post.xpm, fuwo.xpm:
	* followup.xpm, uu-post.xpm, uu-decode.xpm, mail-reply.xpm: